--- a/configure.ac
+++ b/configure.ac
@@ -127,6 +127,10 @@ AC_CHECK_FUNCS([atexit memset pthread_cancel select strchr strerror strtol uslee
 AC_REPLACE_FUNCS(snprintf inet_pton inet_ntop gettimeofday)
 AC_CHECK_DECLS([ENOBUFS, EWOULDBLOCK],[],[],[#include <errno.h>])
 AC_CHECK_DECLS([SO_TIMESTAMP, SO_SNDTIMEO],[],[],[#include <sys/socket.h>])
+AC_CHECK_DECLS([CPU_SET],[],[],[
+	#define _GNU_SOURCE
+	#include <sched.h>
+	])
 
 
 dnl             Gotten from some NetBSD configure.in
