update config.h.in to match configure.ac changes

--- a/config.h.in
+++ b/config.h.in
@@ -55,6 +55,10 @@
    don't. */
 #undef HAVE_DECL_SO_TIMESTAMP
 
+/* Define to 1 if you have the declaration of `TCP_INFO', and to 0 if you
+   don't. */
+#undef HAVE_DECL_TCP_INFO
+
 /* Define to 1 if you don't have `vprintf' but do have `_doprnt.' */
 #undef HAVE_DOPRNT
 
