Add AM_MAINTAINER_MODE(disable) since the end-user should not be required to have autotools

--- a/configure.ac
+++ b/configure.ac
@@ -9,6 +9,9 @@ AC_INIT(Iperf,2.0.7)
 AC_CONFIG_HEADER([config.h])
 AM_INIT_AUTOMAKE()
 
+dnl The end user may not have autotools
+AM_MAINTAINER_MODE([disable])
+
 m4_include([m4/ax_create_stdint_h.m4])
 m4_include([m4/dast.m4])
 m4_include([m4/acx_pthread.m4])
