Replace HAVE_DECL_TCP_INFO with the more specific HAVE_STRUCT_TCP_INFO_TCPI_TOTAL_RETRANS to catch cases like fc4 which had an older version of the tcp_info structure

--- a/config.h.in
+++ b/config.h.in
@@ -55,10 +55,6 @@
    don't. */
 #undef HAVE_DECL_SO_TIMESTAMP
 
-/* Define to 1 if you have the declaration of `TCP_INFO', and to 0 if you
-   don't. */
-#undef HAVE_DECL_TCP_INFO
-
 /* Define to 1 if you don't have `vprintf' but do have `_doprnt.' */
 #undef HAVE_DOPRNT
 
@@ -184,6 +180,9 @@
 
 /* Define to 1 if the system has the type `struct sockaddr_storage'. */
 #undef HAVE_STRUCT_SOCKADDR_STORAGE
+
+/* Define to 1 if `tcpi_total_retrans' is a member of `struct tcp_info'. */
+#undef HAVE_STRUCT_TCP_INFO_TCPI_TOTAL_RETRANS
 
 /* Define to 1 if you have the <syslog.h> header file. */
 #undef HAVE_SYSLOG_H
