--- a/configure.ac
+++ b/configure.ac
@@ -137,7 +137,8 @@ AC_CHECK_DECLS([CPU_SET],[],[],[
 	#include <sched.h>
 	])
 AC_CHECK_DECLS([SIGALRM],[],[],[#include <signal.h>])
-AC_CHECK_DECLS([TCP_INFO],[],[],[#include <linux/tcp.h>])
+AC_CHECK_MEMBERS([struct tcp_info.tcpi_total_retrans],[],[],
+			 [#include <linux/tcp.h>])
 
 
 dnl             Gotten from some NetBSD configure.in
