--- a/config.h.in
+++ b/config.h.in
@@ -133,6 +133,9 @@
 /* Define to 1 if you have the `select' function. */
 #undef HAVE_SELECT
 
+/* Define if 64 bit sequence numbers are desired and available */
+#undef HAVE_SEQNO64b
+
 /* Define to 1 if you have the `setitimer' function. */
 #undef HAVE_SETITIMER
 
