--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ dnl ===================================================================
 
 
 AC_PREREQ(2.59)
-AC_INIT(Iperf,2.0.9)
+AC_INIT(Iperf,2.0.10-alpha)
 AC_CONFIG_HEADER([config.h])
 AM_INIT_AUTOMAKE()
 
@@ -37,6 +37,9 @@ AC_ARG_ENABLE(web100, AC_HELP_STRING([--disable-web100],
 
 AC_ARG_ENABLE(kalman, AC_HELP_STRING([--disable-kalman],
 	    [disable kalman delay tuning (default is enable)]))
+
+AC_ARG_ENABLE(seqno64b, AC_HELP_STRING([--disable-seqno64b],
+	    [disable 64 bit sequence numer support (default is enable)]))
 
 
 dnl ===================================================================
@@ -269,6 +272,10 @@ fi
 
 if test "$enable_kalman" != no; then
 AC_DEFINE([HAVE_KALMAN], 1, [Define if Kalman tuning is desired and available])
+fi
+
+if test "$enable_seqno64b" != no; then
+AC_DEFINE([HAVE_SEQNO64b], 1, [Define if 64 bit sequence numbers are desired and available])
 fi
 
 dnl Static link on MINGW for standalone DOS executable
