add automake support for checkpdfs binary

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -37,11 +37,14 @@ iperf_SOURCES = \
 		sockets.c \
 		stdio.c \
 		tcp_window_size.c
-if ISOCHRONOUS
-iperf_SOURCES += pdfs.c
-endif
 iperf_LDADD = $(LIBCOMPAT_LDADDS)
 
 checkdelay_SOURCES = checkdelay.c
 checkdelay_LDADD = $(LIBCOMPAT_LDADDS)
 
+if ISOCHRONOUS
+iperf_SOURCES += pdfs.c
+noinst_PROGRAMS += checkpdfs
+checkpdfs_SOURCES = pdfs.c checkpdfs.c
+checkpdfs_LDADD = -lm
+endif
