--- a/configure.ac
+++ b/configure.ac
@@ -149,7 +149,13 @@ AC_CHECK_DECLS([CPU_SET],[],[],[
 AC_CHECK_DECLS([SIGALRM],[],[],[#include <signal.h>])
 AC_CHECK_MEMBERS([struct tcp_info.tcpi_total_retrans],[],[],
 			 [#include <netinet/tcp.h>])
-
+AC_CHECK_MEMBER([struct sockaddr_in.sin_len],
+			[AC_DEFINE(HAVE_SOCKADDR_IN_LEN, 1, [Do we have sockaddr_in.sin_len?]) ],[],[],
+[
+#include <sys/types.h>
+#include <sys/socket.h>
+#include <netinet/in.h>
+])
 
 dnl             Gotten from some NetBSD configure.in
 dnl		We assume that if sprintf() supports %lld or %qd,
