move murmur3 to its own src file

--- a/configure.ac
+++ b/configure.ac
@@ -59,6 +59,7 @@ AS_IF([test "x$enable_af_packet" = "xyes"], [
       [enable_af_packet="no"],
       [[#include <sys/socket.h>
       #include <linux/if_packet.h>]])
+   AM_CONDITIONAL([AF_PACKET], [test "x${enable_af_packet}" = "xyes"])
 ])
 
 
