--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -90,10 +90,9 @@ build_triplet = @build@
 host_triplet = @host@
 bin_PROGRAMS = iperf$(EXEEXT)
 noinst_PROGRAMS = checkdelay$(EXEEXT) $(am__EXEEXT_1)
-@ISOCHRONOUS_TRUE@am__append_1 = pdfs.c
-@ISOCHRONOUS_TRUE@am__append_2 = checkpdfs checkisoch
-@AF_PACKET_TRUE@am__append_3 = checksums.c
-@UDPTRIGGERS_TRUE@am__append_4 = ioctls.c
+@ISOCHRONOUS_TRUE@am__append_1 = checkpdfs checkisoch
+@AF_PACKET_TRUE@am__append_2 = checksums.c
+@UDPTRIGGERS_TRUE@am__append_3 = ioctls.c
 subdir = src
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/ax_create_stdint_h.m4 \
@@ -132,9 +131,8 @@ am__iperf_SOURCES_DIST = Client.cpp Extractor.c isochronous.cpp \
 	SocketAddr.c gnu_getopt.c gnu_getopt_long.c histogram.c \
 	main.cpp service.c sockets.c stdio.c tcp_window_size.c pdfs.c \
 	checksums.c ioctls.c
-@ISOCHRONOUS_TRUE@am__objects_1 = pdfs.$(OBJEXT)
-@AF_PACKET_TRUE@am__objects_2 = checksums.$(OBJEXT)
-@UDPTRIGGERS_TRUE@am__objects_3 = ioctls.$(OBJEXT)
+@AF_PACKET_TRUE@am__objects_1 = checksums.$(OBJEXT)
+@UDPTRIGGERS_TRUE@am__objects_2 = ioctls.$(OBJEXT)
 am_iperf_OBJECTS = Client.$(OBJEXT) Extractor.$(OBJEXT) \
 	isochronous.$(OBJEXT) Launch.$(OBJEXT) List.$(OBJEXT) \
 	Listener.$(OBJEXT) Locale.$(OBJEXT) PerfSocket.$(OBJEXT) \
@@ -143,7 +141,7 @@ am_iperf_OBJECTS = Client.$(OBJEXT) Extractor.$(OBJEXT) \
 	gnu_getopt.$(OBJEXT) gnu_getopt_long.$(OBJEXT) \
 	histogram.$(OBJEXT) main.$(OBJEXT) service.$(OBJEXT) \
 	sockets.$(OBJEXT) stdio.$(OBJEXT) tcp_window_size.$(OBJEXT) \
-	$(am__objects_1) $(am__objects_2) $(am__objects_3)
+	pdfs.$(OBJEXT) $(am__objects_1) $(am__objects_2)
 iperf_OBJECTS = $(am_iperf_OBJECTS)
 iperf_DEPENDENCIES = $(am__DEPENDENCIES_1)
 iperf_LINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(iperf_LDFLAGS) \
@@ -346,8 +344,8 @@ iperf_SOURCES = Client.cpp Extractor.c isochronous.cpp Launch.cpp \
 	List.cpp Listener.cpp Locale.c PerfSocket.cpp ReportCSV.c \
 	ReportDefault.c Reporter.c Server.cpp Settings.cpp \
 	SocketAddr.c gnu_getopt.c gnu_getopt_long.c histogram.c \
-	main.cpp service.c sockets.c stdio.c tcp_window_size.c \
-	$(am__append_1) $(am__append_3) $(am__append_4)
+	main.cpp service.c sockets.c stdio.c tcp_window_size.c pdfs.c \
+	$(am__append_2) $(am__append_3)
 iperf_LDADD = $(LIBCOMPAT_LDADDS)
 checkdelay_SOURCES = checkdelay.c
 checkdelay_LDADD = $(LIBCOMPAT_LDADDS)
